...


    <LinearLayout
        android:id="@+id/productDetails"
        android:layout_width="377dp"
        android:layout_height="430dp"
        android:layout_above="@+id/btn_add_item"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="0dp"
        android:background="#BD2AC0"
        android:orientation="vertical"
        android:padding="16dp"
...
                android:text="Product Name: "
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/itemName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Enter Product Name"
                android:textSize="16sp" />

...
            android:layout_marginTop="8dp"
            android:text="Description:"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_pink"
            android:padding="8dp"
            android:maxLines="1"
...
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"

                />

            <EditText
                android:id="@+id/purchaseDate"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/no_underline_border"
                android:focusable="false"
...
                android:layout_height="wrap_content"
                android:text="Make: "
                android:textColor="@color/black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/make"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint=""
                android:textSize="16sp" />
        </LinearLayout>
...
                android:layout_height="wrap_content"
                android:text="Model: "
                android:textColor="@color/black"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/model"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint=""
                android:textSize="16dp"></EditText>
        </LinearLayout>
...
                android:layout_height="wrap_content"
                android:text="Estimated Value: "
                android:textColor="@color/black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/estimatedValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint=""
                android:textSize="16sp"></EditText>
        </LinearLayout>
...
                android:layout_height="wrap_content"
                android:text="Tags: "
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/add_tag_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/black_border_rectangular"
                android:gravity="center"
                android:text="+"
                android:textSize="15dp"

                ></TextView>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/addFragmentTagsChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


            </com.google.android.material.chip.ChipGroup>

...
