...
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/editTextTagInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:paddingStart="12dp"
            android:hint="Create a tag"
            android:background="@drawable/border_pink"/>

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#BD2AC0"
            android:textColor="@color/black"
            android:text="Create"
            android:textSize="15sp"/>
...
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="8dp"
        android:singleLine="true"/>

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:backgroundTint="#BD2AC0"
        android:text="Done" />
...
